--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
 	<div id="root"></div>
 
-	<!-- <script src="build/js/bundle.js"></script> -->
-	<script src="bundle.js"></script>
+	<script src="build/js/bundle.js"></script>
 </body>
 </html>
